# textpatch-studio

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  start.py
.github/workflows/: ci.yml
backend/: config.py  dependencies.py  exceptions.py  logging_utils.py  main.py  security.py
backend/api/: correction.py  export.py  inpaint.py  jobs.py  ocr.py  project_jobs.py  projects.py  regions.py  render.py
backend/core/: border_detection.py  cache.py  compositing.py  correction.py  detection.py  exporter.py  grouping.py  image_validation.py  inpainting.py  jobs.py  masking.py  mser_swt_detection.py  ocr_engine.py  ocr_postprocess.py  pipeline.py  preprocessing.py  rate_limit.py  rendering.py  risk_rules.py  structural_detector.py  style_inference.py  tiny_text_detection.py
backend/inpaint_adapters/: base.py  lama.py  opencv_inpaint.py  simple_fill.py
backend/llm_adapters/: base.py  deepseek.py  mock.py
backend/models/: llm.py  ocr.py  project.py  region.py  render.py  style.py
backend/ocr_adapters/: base.py  paddle.py  rapid.py
backend/renderer/: effects.py  font_downloader.py  font_manager.py  formula_renderer.py  perspective.py  text_layout.py  text_renderer.py
backend/storage/: file_store.py  path_safety.py  project_store.py
cli/: textpatch.py
docs/: SECURITY.md
frontend/: index.html  package.json
frontend/css/: style.css
tests/: test_detection.py  test_ocr.py  test_path_safety.py  test_project_io.py  test_rendering.py  test_risk_rules.py  test_security.py  test_upload_security.py  test_visual_strict.py
(+12 files in other folders)
